--- a/Report/main.tex
+++ b/Report/main.tex
@@ -307,13 +307,13 @@ The first section outlines determining bench mark points and comparing the rest 
 
 \section{Extensions}
 	\begin{itemize}
-		\item \textbf{Determine the correlation between tuition-grants and students' retention rates}
+		\item \textbf{Determine the correlation between tuition-grants and students' retention rates} A strong underlying of the model is the assumption that students' receiving grants are directly guaranteed to graduate. An in-depth study should be undertaken to put a more precise percentage to the correlation. 
 
-		\item \textbf{Refine the number of observed variables used for the kNN method}, run a regression model that would determine the most relevant variables to use as predictors
+		\item \textbf{Refine the number of observed variables used for the kNN method} Assuming the variables can be fitted to a linear regression model, we can run an R-Squared test. The test results would select the variables that are statistically significant improving the investment strategy. 
 
-		\item \textbf{Run the model on major types}
+		\item \textbf{Run the model on major types} Dependent on the charitable goals of the foundation, the model can be further partitioned to run on schools that focus on different concentrations. For example, select only Law Schools. 
 
-		\item \textbf{Determine the true poverty rate by adjusting for major type} as mentioned in Carnevale \cite{Carnevale}.
+		\item \textbf{Determine the true poverty rate by adjusting for major type} Expanding on the idea above about partitioning into majors, we can refine the adjusted poverty rates. Particular institutions appeal more to lower-income individuals and conversely some universities have predominantly middle-income and above student-bodies. \cite{Carnevale}.
 	\end{itemize}
 
 \section{Conclusions}
