Letter for Mr. Alpha

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{scrartcl}
 
 \include{amsfonts,amssymb,amsmath,amsthm,txfonts,pxfonts,mathrsfs,enumitem}
-\usepackage[headheight=15pt,paperwidth=8.5in, paperheight=11in,margin=0.75in]{geometry}
+\usepackage[headheight=15pt,paperwidth=8.5in, paperheight=11in,margin=0.80in]{geometry}
 \usepackage{lastpage}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
@@ -65,6 +65,7 @@ The first section outlines determining bench mark points and comparing the rest 
 		\item Determine the amount of investment and allocation to maximize the return on investment. 
 		\end{itemize}
 				 
+\clearpage
 \section{Model Design and Approach}
 	\subsection{Notations and Definitions}
 	\begin{enumerate}
@@ -328,9 +329,19 @@ We do a sensitivity analysis on the model and find that it does well with any si
 \section{Letter to Mr. Alpha Chiang}
 Dear Mr. Alpha Chiang, \\
 
-Team \#54301 from the MCM proposes  a concept for return-on-investment (ROI) based on the incoming and outgoing poverty rate of the institution. Given the poverty rate, we rank the institutions and the ROI is calculated by the change in rank (i.e. how much better the institutions work after receiving Goodgrant's donation). 
+We are pleased to present a five-year investment strategy aligned with the goals and mission statement of the Good Grant foundation. We have also excluded institutions that leading charities such as Lumina Foundation and Bill and Melinda Gates to avoid duplicating previous investments.\\
 
+You will find that the method outlined below is capable of providing a list of schools where the amount is directly determined by your organization. Included with the list of potential schools, is the donation amount and number of students positively affected by the grant. Our proposed conceptual return of investment(ROI) is dependent on the number of students raised above the poverty line after graduation. Post-secondary education is often seen as the class-equalizer made available to all those wishing to attend. \\
 
+The ROI calculation is also outlined in the body of the letter. The model is split into two sections: one describing selection of potential schools, one describing investment allocation. \\
+
+The first step in our selection process was to determine a set of outstanding high performing institutions to become our benchmarks. The rest of the institutions were classified according to their similarity to the benchmarks. \\
+
+The next step was to determine which schools in the classified list that maximized the proposed ROI. The ROI is specifically measured as change of the level in poverty alleviation. We look at two important variables: the poverty rate according to Census Data and the share of students earning \$25,000/yr after 10 years. From this step it is possible to pick any amount of schools and receive back a list of donation amount and number of students helped. \\
+
+Our results found that schools that specialized in nursing, medical and other related hard sciences ranked the highest on the investment list. Providing support for these schools have a large positive effect on society by adding a larger workforce to the health care and technology field while simultaenously raising these students out of poverty. \\
+
+Overall, we are confident that the proposed investment strategy will exemplify Goodgrant’s fundamental charitable objective. 
 \newpage
 
 
