changes to report

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -35,7 +35,7 @@
 	
 	\ \ Our strategy lies in finding the schools that are most beneficial to individual students. We recognize that the goal of students, when choosing a university is to find the best institution that would reduce their chances at poverty. We start by developing a metric for the level of alleviation of poverty caused by each university, we call it PES. We use this as the benchmark for the initial ranking of schools.\\ 
 
-	\ \ Once that is achieved, we use the kNN method tolook for the institutions that are closest in structure to the top universities. As these are the institutions that would benefit most from an increase in funding. Since, our goal is to benefit the well-being of future generation, our return on investment measure, looks at the increase in poverty reduction. Which we maximize by running a linear maximization algorithm on our investments.\\
+	\ \ Once that is achieved, we use the kNN algorithm to look for the institutions that are closest in structure to the top universities. As these are the institutions that would benefit most from an increase in funding. Since, our goal is to benefit the well-being of future generation, our return on investment measure, looks at the increase in poverty reduction. Which we maximize by running a linear maximization algorithm on our investments.\\
 
 	\ \ At the end of the report we list the schools that would benefit the most out of an increase in investments, as well as a way to prioritize them. Our methods allows for the selection of fixed number of schools as well as a unique way of allowing the model to choose the number of schools that should be invested. 
 \newpage
