--- a/Report/main.tex
+++ b/Report/main.tex
@@ -214,6 +214,7 @@
 	\subsection{Partitioning and Benchmark}
 		\ \ As discussed in the previous section, the first goal in the analysis is to find a list of benchmark schools. However, before doing so, we partitioned the schools by the type of degrees that they predominantly provide. This was due to the fact that otherwise, many pieces of data become unusable, and the kNN algorithm becomes biased towards schools that have less-years-to-graduation.\\ 
 		\\
+		Once we acquired this data, we chose the top 10 schools from each school type as our benchmark schools. It is also important to note the schools here do not \underline{only} provide the designated degree, but rather have a predominate focus on such degrees.\\
 		\begin{figure}[H]
 		\centering
 			\subfloat[2 Year Program]{\includegraphics[width=0.45\textwidth]{2yr-col.png}}
@@ -225,50 +226,59 @@
 		\centering
 		\includegraphics*[width=0.90\linewidth]{6yr-col.png}\caption*{(c) 6 Year Program}
 		\end{wrapfigure} 	
-		Once we acquired this data, we chose the top 10 schools from each school type as our benchmark schools. It is also important to note the schools here do not \underline{only} provide the designated degree, but rather have a predominate focus on such degrees.\\
-		\\
 		We used the schools noted in Figures (a),(b) and (c) as our benchmark schools for the kNN method. These school already preform well based on our ranking, and we wanted to find the next best schools that would benefit from an investment by our charity.
+		\\
+		\\
+		\\
+		\\
+		\\
+		\\
+		\\
 		\\
 		\\
 	\subsection{Variable Selection}
 		\subsubsection{Filtering by Grant}
-			Since we did not want to overlap with grants given by other institutions, we filtered the next list using the data given by the Gates\cite{Bill} and Lumina \cite{Grant} Foundations.\\
+			\ \ Since we did not want to overlap with grants given by other institutions, we filtered the next list using the data given by the Gates \cite{Bill} and Lumina \cite{Grant} Foundations. We did this by simply omitting schools that passed a particular threshold we set.
 		
 		\subsubsection{Scorecard Variables}
-			First we created a dictionary for all the variables that were given to us by Scorecard. We had to categorize these variables as follows:
+			\ \ Since not all the variables in the provided dictionary were given to us. We first we created a dictionary for all the variables that were given to us by Scorecard. We did this by comparing the variable titles in the dictionary and the data. \\
+			
+			\ \ Then we categorized these variables as follows:
 			\begin{itemize}
 				\item \textbf{Irrelevant [0]}, values such as location of website, or miscellaneous ids.
 				\item \textbf{Informative [1]}, flags for women-only, historically black colleges and others. 
-				\item \textbf{Selected [2]}, the values we chose to focus on, such as SAT, ACT, retention rates etc. 
+				\item \textbf{Selected [2]}, the values we chose to focus on, such as SAT, ACT, retention rates, graduation rates, tuition, debt of completers and income of students after graduation. 
 				\item \textbf{Percentile [3]} values that refer to the composition of the student body (such as racial, sexual or income composition).
 			\end{itemize}
-			We did make use of [1], and [3], for cleaning and producing other variables (such as the PES rank), however we did not run the kNN algorithm on them.
+			\ \ We did make use of [1], and [3], for cleaning and producing other variables (such as the PES rank), however we did not run the kNN algorithm on them.
 
 		\subsubsection{IPEDS Variables}
-			Since many of the variables provided by scorecard, overlapped with the ones from IPEDS, we only withdrew the following variables:
+			\ \ Since many of the variables provided by scorecard, overlapped with the ones from IPEDS, we only withdrew the following variables:
 			\begin{itemize}
 				\item \textbf{Number of students}, which we used for computation of kNN and for the maximization algorithm.
 				\item \textbf{Average Tuition of Low Income Students}, which we used mainly for the maximization.
+				\item \textbf{Faculty to Student ratio}, used only for the maximization.
 				\item \textbf{Total Grants Received}, we summed the various grants that each university received to get this number. We then used it for both kNN and maximization.
 			\end{itemize}
 	
 	\subsection{kNN Selection}
-		After this point, we used the kNN algorithm as the method of selection for the nearest best schools. As we wish to avoid investing in the top tier schools, and would rather invest in schools with the potential to become the top-tier. 
-		\\ \\
-		Prior to the application of the kNN algorithm we normalized the data by transforming each variable to a scale in $[0,1]$, in order to avoid bias for larger scaled-values.\\
-		\\
-		This identification provided us with the following schools as can be seen in fig.\ref{fig:kNN}.
+		\ \ After this point, we used the kNN algorithm as the method of selection for the nearest best schools. As we wish to avoid investing in the top tier schools, and would rather invest in schools with the potential to become the top-tier. \\
+
+		\ \ Prior to the application of the kNN algorithm we normalized the data by transforming each variable to a scale in $[0,1]$, in order to avoid bias for larger scaled-values.\\
+		\clearpage
+		\ \ This identification provided us with the following schools as can be seen in fig.\ref{fig:kNN}.
 		\begin{figure}[H]
 			\centering
 			\includegraphics[width=0.45\textwidth]{nearest-schools.png}
 			\caption{Sample of kNN results}
 			\label{fig:kNN}
 		\end{figure}
-		(please note that this is not the entire dataset, the full dataset will be provided separately).
+		(please note that this is not the entire dataset).
 	
 	\subsection{Maximizing the Return}
-		Since our ultimate goal is to invest in schools that would offset poverty the most. We focused on the change in PES. The amount invested in each school should therefore maximize the increase in PES. This increase is our measurement for ROI.\\
-		The set up for this problem is outlined in sections 2.4-2.5, using equations (10) and (11) and the aggregation of all the school's variables into a single list we can get the following:
+		\ \ Since our ultimate goal is to invest in schools that would offset poverty the most. We focused on the change in PES. The amount invested in each school should therefore maximize the increase in PES. This increase is our measurement for ROI.\\
+		
+		\ \ The set up for this problem is outlined in sections 2.4-2.5, using equations (10) and (11) and the aggregation of all the school's variables into a single list we can get the following:
 		\begin{equation*}
 				\begin{aligned}
 					& \underset{\forall n_j}{\text{maximize}}
@@ -278,10 +288,10 @@
 					&&& \forall i,j \ \ \ 1\le n_j\cdot T_j \le g_j\phi_j
 				\end{aligned}	
 		\end{equation*}
-		We used the linear-optimization method described in Winston \cite{Winston}, in order to solve this problem. Once done, the results for the top 20 school as an output of our method is seen in Figure 2.
-		\\
-		\\
-		The overall return on investment that we received for this model was $1.01$\%. It is also important to note that we applied the same process to the unpartitioned version of this model. When doing that we saw that many variables were dropped in the process (due to being overwhelmingly null) and the return on investment dropped to $0.75$\%.
+
+		\ \ We used the linear-optimization method described in Winston \cite{Winston}, in order to solve this problem. Once done, the results for the top 20 school as an output of our method is seen in Figure 2.\\
+
+		\ \ The overall return on investment that we received for this model was $1.01$\%. It is also important to note that we applied the same process to the unpartitioned version of this model. When doing that we saw that many variables were dropped in the process (due to being overwhelmingly null) and the return on investment dropped to $0.75$\%.
 		\begin{figure}[H]
 			\centering
 			\includegraphics[width=0.7\textwidth]{final.png}
@@ -291,16 +301,17 @@
 
 \section{Discussion} 
 	\subsection{Sensitivity Analysis}
-		In order to test model stability, we impose a radius condition to the kNN selection algorithm. The model testing outlined in Section 3 used an unrestricted subset of the data. We compute the the mean and standard deviation for each class $i$. Then each value exceeding k from k = 1,..3 standard deviations away was omitted from the data passed to the investment algorithm. The goal is to partition the dataset such that the subset data will have 68\%, 95\%, and 99.7\% of the data.\\
+		
+		\ \ In order to test model stability, we impose a radius condition to the kNN selection algorithm. The model which was applied in Section 3 used an unrestricted subset of the data. We compute the the mean and standard deviation for each class $i$. Then each value exceeding k from k = 1,..3 standard deviations away was omitted from the data passed to the investment algorithm. The goal is to partition the dataset such that the subset data will have 68\%, 95\%, and 99.7\% of the data.\\
 
-		With all other variables the same the ROI for each standard deviation(STD) is:
+		\ \ With all other variables the same the ROI for each standard deviation(STD) is:
 		\begin{enumerate}
 		\item STD 1 ROI: 0.0353
 		\item STD 2 ROI: 0.0499
 		\item STD 3 ROI: 0.0474
 		\end{enumerate}
 
-		All ROI are relatively the same suggesting that the model does well with any size of data input. 
+		\ \ All ROI are relatively the same suggesting that the model does well with any size of data input. 
 
 	\subsection{Strengths}
 		\begin{itemize}
